<resources>
    <string name="app_name">PoolPal</string>
    <string name="blank"></string>
    <string name="value">value</string>
    <string name="label">label</string>
    <string name="action_edit">Edit Action</string>
    <string name="action_open">Open Action</string>
    <string name="action_toggle">Toggle Action</string>
    <string name="alerts">Alerts</string>
    <string name="preferences">Preferences</string>
    <string name="view_logs">View Logs</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="ab_pool_profile">Pool Profile</string>
    <string name="ab_edit_pool">Edit</string>
    <string name="ab_new_pool">New Pool</string>
    <string name="poolpal_setup">PoolPal Setup</string>
    <string name="ab_water_chemistry">Water Chemistry</string>
    <string name="poolpedia">PoolPedia</string>
    <string name="troubleshoot">Troubleshoot</string>
    <string name="agenda">Agenda</string>
    <string name="calculator">Calculator</string>
    <string name="shop">Shop</string>
    <string name="charts">Charts</string>
    <string name="settings">Settings</string>
    <string name="supplies">Supplies</string>
    <string name="section_pool">POOL</string>
    <string name="section_water_balance">WATER CHEMISTRY</string>
    <string name="setup_pool">Setup Your Pool</string>
    <string name="setup_pool_details">Required info for PoolPal\'s calculations and recomendations</string>
    <string name="title_general_maintenance">General Maintenance</string>
    <string name="title_cleaning">Cleaning</string>
    <string name="title_shock_treatment">Shock Treatment</string>
    <string name="title_ph_up_treatment">pH Up Treatment</string>
    <string name="title_ph_down_treatment">pH Down Treatment</string>
    <string name="title_alkalinity_up_treatment">Alkalinity Up Treatment</string>
    <string name="title_alkalinity_down_treatment">Alkalinity Down Treatment</string>
    <string name="title_stabilizer_up_treatment">Stabilizer Up Treatment</string>
    <string name="title_hardness_up_treatment">Hardness Up Treatment</string>
    <string name="title_algaecide_treatment">Algaecide Treatment</string>
    <string name="title_metal_treatment">Metal Treatment</string>
    <string name="title_clarifier_treatment">Clarifier Treatment</string>
    <string name="title_water_tests">Water Tests</string>
    <string name="title_basic_water_tests">Chlorine, Ph &amp; Alkalinity Tests</string>
    <string name="title_common_water_tests">Stabilizer, TDS &amp; Other Common Tests</string>
    <string name="title_long_term_water_tests">Hardness &amp; Saturation Index Tests</string>
    <string name="title_filter_maintenance">Filter Maintenance</string>
    <string name="title_filter_clean">Filter Cleaning</string>
    <string name="title_filter_replacement">Filter Replacement</string>
    <string name="message_general_maintenance">General Maintenance</string>
    <string name="message_cleaning">Cleaning</string>
    <string name="message_shock_treatment">Shock Treatment</string>
    <string name="message_ph_up_treatment">pH Up Treatment</string>
    <string name="message_ph_down_treatment">pH Down Treatment</string>
    <string name="message_alkalinity_up_treatment">Alkalinity Up Treatment</string>
    <string name="message_alkalinity_down_treatment">Alkalinity Down Treatment</string>
    <string name="message_stabilizer_up_treatment">Stabilizer Up Treatment</string>
    <string name="message_hardness_up_treatment">Hardness Up Treatment</string>
    <string name="message_algaecide_treatment">Algaecide Treatment</string>
    <string name="message_metal_treatment">Metal Treatment</string>
    <string name="message_clarifier_treatment">Clarifier Treatment</string>
    <string name="message_water_tests">Water Tests</string>
    <string name="message_basic_water_tests">Chlorine, Ph &amp; Alkalinity Tests</string>
    <string name="message_common_water_tests">Stabilizer, TDS &amp; Other Common Tests</string>
    <string name="message_long_term_water_tests">Hardness &amp; Saturation Index Tests</string>
    <string name="message_filter_maintenance">Filter Maintenance</string>
    <string name="message_filter_clean">Filter Cleaning</string>
    <string name="message_filter_replacement">Filter Replacement</string>
    <string name="dialog_chlorine_input">Free Chlorine</string>
    <string name="dialog_ph_input">pH</string>
    <string name="dialog_alkalinity_input">Total Alkalinity</string>
    <string name="dialog_hardness_input">Calcium Hardness</string>
    <string name="dialog_stabilizer_input">Stabilizer/Conditioner/CYA</string>
    <string name="dialog_temperature_input">Temperature</string>
    <string name="title_welcome">Welcome to PoolPal</string>
    <string name="title_continue_editing">Continue Editing?</string>
    <string name="title_set_image">Set Pool Image</string>
    <string name="btn_get_plan">Get Plan</string>
    <string name="btn_log">Log</string>
    <string name="btn_tasks">Tasks</string>
    <string name="btn_notifications">Notifications</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="new_pool">New Pool</string>
    <string name="water_chemistry">Water Chemistry</string>
    <string name="supply_costs">Supply Costs</string>
    <string name="current_location">GPS</string>
    <string name="get_started">Get Started</string>
    <string name="take_tour">Take A Tour</string>
    <string name="save_values">Save Values</string>
    <string name="finish">Finish</string>
    <string name="add_more">Add More</string>
    <string name="btn_info">Info</string>
    <string name="btn_charts">Charts</string>
    <string name="search_again">Search Again</string>
    <string name="title_pool_details">POOL DETAILS</string>
    <string name="title_location">LOCATION</string>
    <string name="title_dimensions">DIMENSIONS</string>
    <string name="title_hardware">HARDWARE, SYSTEMS &amp; STRUCTURE</string>
    <string name="title_tasks">SCHEDULES &amp; TASKS</string>
    <string name="title_notifications">NOTIFICATIONS</string>
    <string name="title_info">INFO</string>
    <string name="title_accessories">ACCESSORIES &amp; AMENITIES</string>
    <string name="title_repitition">TASK REPITITION</string>
    <string name="title_reminders">REMINDERS</string>
    <string name="lbl_dimensions">Dimensions</string>
    <string name="lbl_chlorine">Chlorine</string>
    <string name="lbl_ph">pH</string>
    <string name="lbl_alkalinity">Alkalinity</string>
    <string name="lbl_hardness">Hardness</string>
    <string name="lbl_temperature">Temperature</string>
    <string name="lbl_stabilizer">Stabilizer</string>
    <string name="lbl_name">Nickname</string>
    <string name="lbl_volume">Volume</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_zip_code">Zip Code</string>
    <string name="lbl_default_pool">Default Pool</string>
    <string name="lbl_pool_locale">Locale</string>
    <string name="lbl_pool_finish">Pool Finish</string>
    <string name="lbl_pump">Pump</string>
    <string name="lbl_sanitizer">Sanitizer Type</string>
    <string name="lbl_filter">Filter Type</string>
    <string name="lbl_traffic">Traffic Volume</string>
    <string name="lbl_cleaner">Pool Cleaner</string>
    <string name="lbl_water_type">Water Type</string>
    <string name="lbl_min">Shallow</string>
    <string name="lbl_depth">Depth</string>
    <string name="lbl_max">Deep</string>
    <string name="lbl_tiling">Tiling</string>
    <string name="lbl_pool_cover">Pool Cover</string>
    <string name="lbl_attached_spa">Attached Spa</string>
    <string name="lbl_heater">Heater</string>
    <string name="lbl_diving_board">Diving Board</string>
    <string name="lbl_slide">Slide</string>
    <string name="lbl_ladder">Ladder Access</string>
    <string name="lbl_fountains">Fountains</string>
    <string name="lbl_rock_waterfall">Rock Waterfall</string>
    <string name="lbl_lights">Lights</string>
    <string name="lbl_infinity_edge">Infinity Edge</string>
    <string name="lbl_sporting_equipment">Sporting Equipment</string>
    <string name="lbl_beach_entry">Beach Entry</string>
    <string name="lbl_sand">Sand</string>
    <string name="lbl_water_tests">Water Tests</string>
    <string name="lbl_filter_maintenance">Filter Maintenance</string>
    <string name="lbl_general_maintenance">General Maintenance</string>
    <string name="lbl_custom_tasks">Custom Tasks</string>
    <string name="lbl_notifications">Notification Settings</string>
    <string name="lbl_hardware">Hardware, Systems &amp; Structure</string>
    <string name="lbl_accessories">Accessories &amp; Amenities</string>
    <string name="lbl_weather_notifications">Weather</string>
    <string name="lbl_water_test_reminders">Water Test</string>
    <string name="lbl_filter_reminders">Filter Maintenance</string>
    <string name="lbl_safety_notifications">Water Safety</string>
    <string name="lbl_maintenance_reminders">General Maintenance</string>
    <string name="lbl_custom_reminders">Custom Tasks</string>
    <string name="lbl_coupon_notifications">Coupons &amp; Deals</string>
    <string name="lbl_task_title">Title</string>
	<string name="lbl_task_message">Message</string>
	<string name="lbl_task_repitition">Repitition</string>
	<string name="lbl_task_date">Date</string>
	<string name="lbl_task_next_on_completion">Create Next On Completion</string>
	<string name="lbl_task_reminder">Reminder</string>
	<string name="lbl_task_new_reminder">Create New Reminder</string>
	<string name="lbl_task_late_reminders">Late Reminders</string>
	<string name="lbl_task_timer">Timer</string>
	<string name="lbl_task_timer_duration">Duration</string>
	<string name="lbl_task_timer_notification">Timer Notification</string>
	<string name="lbl_task_timer_message">Timer Message</string>
	<string name="lbl_task_item">Item</string>
	<string name="lbl_task_favorite">Favorite</string>
    <string name="details_name">Give your pool a nickname</string>
    <string name="details_dimensions">Set the dimensions of your pool</string>
    <string name="details_volume">Set this pool\'s volume</string>
    <string name="details_depth">Set this pool\'s min and max depth</string>
    <string name="details_pool_locale">Set this pool\'s locale on the property</string>
    <string name="details_address">Set this pool\'s physical location</string>
    <string name="prompt_set_image">Choose an option</string>
    <string name="details_water_tests">Set water testing schedules for this pool</string>
    <string name="details_filter_maintenance">Set filter maintenance schedules for this pool</string>
    <string name="details_general_maintenance">Set general maintenance schedules for this pool</string>
    <string name="details_custom_tasks">Manage custom tasks for this pool</string>
    <string name="details_notifications">Manage how PoolPal notifies you about important alerts and reminders</string>
    <string name="details_hardware">Pool features that help PoolPal troubleshoot and make accurate calculations</string>
    <string name="details_traffic">Set this pool\'s traffic volume</string>
    <string name="hint_address_line_one">Street address, P.O. box, etc.</string>
    <string name="hint_address_city">City</string>
    <string name="hint_address_zip">ZIP/Postal Code</string>
    <string name="hint_address_state">State</string>
    <string name="description_location">Location</string>
    <string name="description_clear">Clear Value</string>
    <string name="description_photos">Photos</string>
    <string name="description_volume">Calculate Volume</string>
    <string name="description_gps">GPS Location</string>
    <string name="description_health">Pool Health</string>
</resources>