<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ab_solid_shadow" >

    <RelativeLayout android:id="@+id/pool"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="left"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        style="@style/PoolPal.Widget.Button.Section" >

        <ImageView android:id="@+id/photo"
            android:tag="empty"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_label_photos_white"
            android:contentDescription="@string/description_photos"
            android:gravity="center"
            android:scaleType="fitXY"
            android:background="@drawable/set_image_default" />

        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/photo" >

	        <com.devspacenine.poolpal.view.RobotoTextView android:id="@+id/nickname"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="4dp"

	            style="@style/PoolPal.Widget.TextView.Title.Inverse.Large" />

	        <LinearLayout android:id="@+id/info1"
	            android:orientation="horizontal"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center_vertical" >

		        <ImageView android:id="@+id/location_icon"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginRight="8dp"
		            android:src="@drawable/ic_small_location"
		            android:contentDescription="@string/description_location" />

		        <com.devspacenine.poolpal.view.RobotoTextView android:id="@+id/location"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            style="@style/PoolPal.Widget.TextView.Details.Inverse" />

		    </LinearLayout>

	        <LinearLayout android:id="@+id/info2"
	            android:orientation="horizontal"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center_vertical" >

		        <ImageView android:id="@+id/volume_icon"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_marginRight="8dp"
		            android:src="@drawable/ic_small_measure"
		            android:contentDescription="@string/description_volume" />

		        <com.devspacenine.poolpal.view.RobotoTextView android:id="@+id/volume"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            style="@style/PoolPal.Widget.TextView.Details.Inverse" />

		    </LinearLayout>

		</LinearLayout>

    </RelativeLayout>

    <View
        android:layout_marginBottom="8dp"
        style="@style/PoolPal.Divider.Horizontal.Light" />

    <FrameLayout android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>