<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="96dp"
	        android:gravity="left"
	        android:paddingTop="8dp"
	        android:paddingLeft="16dp"
	        android:paddingRight="16dp"
	        android:paddingBottom="8dp"
	        android:background="@drawable/ab_solid_shadow" >

	        <ImageView android:id="@+id/photo"
	            android:tag="empty"
	            android:layout_width="80dp"
	            android:layout_height="80dp"
	            android:layout_alignParentTop="true"
	            android:layout_alignParentLeft="true"
	            android:layout_marginRight="8dp"
	            android:src="@drawable/ic_label_photos_white"
	            android:contentDescription="@string/description_photos"
	            android:onClick="setImage"
	            style="@style/PoolPal.Widget.Button.SetImage" />

	        <LinearLayout android:orientation="vertical"
	            android:layout_width="wrap_content"
	            android:layout_height="80dp"
	            android:layout_alignParentTop="true"
	            android:layout_toRightOf="@id/photo" >

		        <com.devspacenine.poolpal.view.RobotoTextView android:id="@+id/nickname"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="4dp"
		            style="@style/PoolPal.Widget.TextView.Title.Inverse.Large" />

		        <LinearLayout android:id="@+id/info1"
		            android:orientation="horizontal"
		            android:layout_width="wrap_content"
		            android:layout_height="0dp"
	            	android:layout_weight="1"
		            android:gravity="center_vertical" >

			        <ImageView android:id="@+id/location_icon"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_vertical"
			            android:src="@drawable/ic_small_location"
			            android:contentDescription="@string/description_location" />

			        <com.devspacenine.poolpal.view.RobotoTextView android:id="@+id/location"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_vertical"
			            style="@style/PoolPal.Widget.TextView.Details.Inverse" />

			    </LinearLayout>

		        <LinearLayout android:id="@+id/info2"
		            android:orientation="horizontal"
		            android:layout_width="wrap_content"
		            android:layout_height="0dp"
	            	android:layout_weight="1"
		            android:gravity="center_vertical" >

			        <ImageView android:id="@+id/health_icon"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_vertical"
			            android:layout_marginRight="4dp"
			            android:src="@drawable/ic_small_heart"
			            android:contentDescription="@string/description_health" />

			        <com.devspacenine.poolpal.view.RobotoTextView android:id="@+id/health"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_vertical"
			            style="@style/PoolPal.Widget.TextView.Details.Inverse" />

			    </LinearLayout>

		    </LinearLayout>

	    </RelativeLayout>

	    <TabWidget android:id="@android:id/tabs"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="0" />

	    <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

	</LinearLayout>

</TabHost>